CLOV-1089 Update of test cases